@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2005/06/29 09:33:26 dogcow Exp $
+@comment $NetBSD: PLIST,v 1.3 2005/10/24 08:46:06 dogcow Exp $
 bin/gpasm
 bin/gpdasm
 bin/gplib
@@ -10,6 +10,7 @@ man/fr/man1/gpasm.1
 man/fr/man1/gpdasm.1
 man/fr/man1/gplib.1
 man/fr/man1/gplink.1
+man/fr/man1/gpstrip.1
 man/fr/man1/gputils.1
 man/fr/man1/gpvc.1
 man/fr/man1/gpvo.1
